--- a/eth/cryptozon-rinkeby/subgraph.yaml
+++ b/eth/cryptozon-rinkeby/subgraph.yaml
@@ -33,7 +33,7 @@ dataSources:
           handler: handleItemAdded
         - event: ItemFilesUpdated(indexed uint256,string,uint256)
           handler: handleItemFilesUpdated
-        - event: ItemUpdated(address,indexed uint256,string,string,string,uint256,uint256,string)
+        - event: ItemUpdated(address,indexed uint256,string,string,uint256,uint256,string,bytes)
           handler: handleItemUpdated
         - event: SubcategoryAdded(indexed uint256,indexed uint256)
           handler: handleSubcategoryAdded
