--- a/eth/cryptozon-rinkeby/subgraph.yaml
+++ b/eth/cryptozon-rinkeby/subgraph.yaml
@@ -16,6 +16,7 @@ dataSources:
         - Approval
         - CategoryCreated
         - ItemAdded
+        - ItemCreated
         - ItemFilesUpdated
         - ItemUpdated
         - SubcategoryAdded
@@ -31,9 +32,11 @@ dataSources:
           handler: handleCategoryCreated
         - event: ItemAdded(indexed uint256,indexed uint256)
           handler: handleItemAdded
+        - event: ItemCreated(indexed uint256)
+          handler: handleItemCreated
         - event: ItemFilesUpdated(indexed uint256,string,uint256)
           handler: handleItemFilesUpdated
-        - event: ItemUpdated(address,indexed uint256,string,string,uint256,uint256,string,bytes)
+        - event: ItemUpdated(indexed uint256,string,string,uint256,uint256,string,bytes)
           handler: handleItemUpdated
         - event: SubcategoryAdded(indexed uint256,indexed uint256)
           handler: handleSubcategoryAdded
