--- a/eth/cryptozon-rinkeby/subgraph.yaml
+++ b/eth/cryptozon-rinkeby/subgraph.yaml
@@ -19,6 +19,7 @@ dataSources:
         - ItemCreated
         - ItemFilesUpdated
         - ItemUpdated
+        - SetItemOwner
         - SubcategoryAdded
         - Transfer
         - Vote
@@ -38,6 +39,8 @@ dataSources:
           handler: handleItemFilesUpdated
         - event: ItemUpdated(indexed uint256,string,string,uint256,uint256,string,bytes)
           handler: handleItemUpdated
+        - event: SetItemOwner(indexed uint256,indexed address)
+          handler: handleSetItemOwner
         - event: SubcategoryAdded(indexed uint256,indexed uint256)
           handler: handleSubcategoryAdded
         - event: Transfer(indexed address,indexed address,uint256)
