--- a/eth/cryptozon-rinkeby/package.json
+++ b/eth/cryptozon-rinkeby/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "CryptozonRinkeby",
+  "name": "CryptozonRinkeby2",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ vporton/CryptozonRinkeby",
-    "create-local": "graph create --node http://localhost:8020/ vporton/CryptozonRinkeby",
-    "remove-local": "graph remove --node http://localhost:8020/ vporton/CryptozonRinkeby",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 vporton/CryptozonRinkeby"
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ vporton/CryptozonRinkeby2",
+    "create-local": "graph create --node http://localhost:8020/ vporton/CryptozonRinkeby2",
+    "remove-local": "graph remove --node http://localhost:8020/ vporton/CryptozonRinkeby2",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 vporton/CryptozonRinkeby2"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.18.0",
