--- a/eth/cryptozon-rinkeby/subgraph.yaml
+++ b/eth/cryptozon-rinkeby/subgraph.yaml
@@ -37,7 +37,7 @@ dataSources:
           handler: handleItemCreated
         - event: ItemFilesUpdated(indexed uint256,string,uint256,bytes)
           handler: handleItemFilesUpdated
-        - event: ItemUpdated(indexed uint256,string,string,uint256,uint256,string,bytes)
+        - event: ItemUpdated(indexed uint256,string,string,uint256,uint256,string,string)
           handler: handleItemUpdated
         - event: SetItemOwner(indexed uint256,indexed address)
           handler: handleSetItemOwner
