--- a/eth/cryptozon-rinkeby/subgraph.yaml
+++ b/eth/cryptozon-rinkeby/subgraph.yaml
@@ -20,6 +20,7 @@ dataSources:
         - ItemCreated
         - ItemFilesUpdated
         - ItemUpdated
+        - SetARWallet
         - SetItemOwner
         - SubcategoryAdded
         - Transfer
@@ -42,6 +43,8 @@ dataSources:
           handler: handleItemFilesUpdated
         - event: ItemUpdated(indexed uint256,string,string,uint256,uint256,string,string)
           handler: handleItemUpdated
+        - event: SetARWallet(indexed address,indexed uint256)
+          handler: handleSetARWallet
         - event: SetItemOwner(indexed uint256,indexed address)
           handler: handleSetItemOwner
         - event: SubcategoryAdded(indexed uint256,indexed uint256)
