--- a/eth/cryptozon-rinkeby/subgraph.yaml
+++ b/eth/cryptozon-rinkeby/subgraph.yaml
@@ -15,7 +15,7 @@ dataSources:
       entities:
         - Approval
         - CategoryCreated
-        - ItemAdded
+        - ItemAddedToCategory
         - ItemCoverUpdated
         - ItemCreated
         - ItemFilesUpdated
@@ -33,8 +33,8 @@ dataSources:
           handler: handleApproval
         - event: CategoryCreated(indexed uint256,string,string)
           handler: handleCategoryCreated
-        - event: ItemAdded(indexed uint256,indexed uint256)
-          handler: handleItemAdded
+        - event: ItemAddedToCategory(indexed uint256,indexed uint256)
+          handler: handleItemAddedToCategory
         - event: ItemCoverUpdated(indexed uint256,bytes)
           handler: handleItemCoverUpdated
         - event: ItemCreated(indexed uint256)
