--- a/eth/cryptozon-rinkeby/subgraph.yaml
+++ b/eth/cryptozon-rinkeby/subgraph.yaml
@@ -43,7 +43,7 @@ dataSources:
           handler: handleItemFilesUpdated
         - event: ItemUpdated(indexed uint256,string,string,uint256,uint256,string,string)
           handler: handleItemUpdated
-        - event: SetARWallet(indexed address,indexed uint256)
+        - event: SetARWallet(indexed address,string)
           handler: handleSetARWallet
         - event: SetItemOwner(indexed uint256,indexed address)
           handler: handleSetItemOwner
