--- a/eth/cryptozon-rinkeby/subgraph.yaml
+++ b/eth/cryptozon-rinkeby/subgraph.yaml
@@ -35,7 +35,7 @@ dataSources:
           handler: handleCategoryCreated
         - event: ItemAddedToCategory(indexed uint256,indexed uint256)
           handler: handleItemAddedToCategory
-        - event: ItemCoverUpdated(indexed uint256,bytes,uint256,uint256)
+        - event: ItemCoverUpdated(indexed uint256,indexed uint256,bytes,uint256,uint256)
           handler: handleItemCoverUpdated
         - event: ItemCreated(indexed uint256)
           handler: handleItemCreated
