--- a/eth/cryptozon-rinkeby/package.json
+++ b/eth/cryptozon-rinkeby/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.18.0",
-    "@graphprotocol/graph-ts": "0.18.0",
-    "smartweave": "https://arweave.net/AM-u4X2po-3Tx7fma3lRonCfLwrjI42IALwDL_YFXBs"
+    "@graphprotocol/graph-ts": "0.18.0"
   }
 }
