--- a/eth/package.json
+++ b/eth/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@nomiclabs/buidler": "^1.3.8",
+    "@nomiclabs/buidler-web3": "^1.3.4",
     "buidler-deploy": "^0.4.8"
   },
   "devDependencies": {
