--- a/eth/cryptozon-rinkeby/subgraph.yaml
+++ b/eth/cryptozon-rinkeby/subgraph.yaml
@@ -24,7 +24,7 @@ dataSources:
         - SetOwner
         - SetOwnerShare
         - Transfer
-        - Vote
+        - ChildParentVote
       abis:
         - name: Contract
           file: ./abis/Contract.json
@@ -51,6 +51,6 @@ dataSources:
           handler: handleSetOwnerShare
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
-        - event: Vote(uint256,uint256,int256)
-          handler: handleVote
+        - event: ChildParentVote(uint256,uint256,int256)
+          handler: handleChildParentVote
       file: ./src/mapping.ts
