--- a/eth/cryptozon-rinkeby/subgraph.yaml
+++ b/eth/cryptozon-rinkeby/subgraph.yaml
@@ -21,6 +21,7 @@ dataSources:
         - ItemUpdated
         - LinkUpdated
         - SetARWallet
+        - SetAuthorInfo
         - SetItemOwner
         - SetOwner
         - SetOwnerShare
@@ -47,6 +48,8 @@ dataSources:
           handler: handleLinkUpdated
         - event: SetARWallet(indexed address,string)
           handler: handleSetARWallet
+        - event: SetAuthorInfo(indexed address,string,string)
+          handler: handleSetAuthroInfo
         - event: SetItemOwner(indexed uint256,indexed address)
           handler: handleSetItemOwner
         - event: SetOwner(address)
