make version event field indexed

--- a/eth/cryptozon-rinkeby/subgraph.yaml
+++ b/eth/cryptozon-rinkeby/subgraph.yaml
@@ -40,7 +40,7 @@ dataSources:
           handler: handleItemCoverUpdated
         - event: ItemCreated(indexed uint256)
           handler: handleItemCreated
-        - event: ItemFilesUpdated(indexed uint256,string,uint256,string)
+        - event: ItemFilesUpdated(indexed uint256,string,indexed uint256,string)
           handler: handleItemFilesUpdated
         - event: SetLastItemVersion(indexed uint256,uint256)
           handler: handleSetLastItemVersion
