--- a/eth/package.json
+++ b/eth/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "@nomiclabs/buidler": "^1.3.8",
+    "@nomiclabs/buidler-ganache": "^1.3.3",
     "@nomiclabs/buidler-web3": "^1.3.4",
-    "buidler-deploy": "^0.4.8"
+    "buidler-deploy": "^0.4.8",
+    "web3": "1.2.9"
   },
   "devDependencies": {
     "@nomiclabs/buidler-ethers": "^2.0.0",
