--- a/eth/cryptozon-rinkeby/subgraph.yaml
+++ b/eth/cryptozon-rinkeby/subgraph.yaml
@@ -69,7 +69,7 @@ dataSources:
           handler: handleSetOwnerShare
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
-        - event: ChildParentVote(uint256,uint256,int256,int256)
+        - event: ChildParentVote(uint256,uint256,int256,int256,bool)
           handler: handleChildParentVote
         - event: Pay(indexed address,indexed address,indexed uint256,uint256)
           handler: handlePay
