--- a/eth/cryptozon-rinkeby/subgraph.yaml
+++ b/eth/cryptozon-rinkeby/subgraph.yaml
@@ -24,6 +24,7 @@ dataSources:
         - ItemUpdated
         - LinkUpdated
         - SetARWallet
+        - SetNick
         - SetAuthorInfo
         - SetItemOwner
         - SetOwner
@@ -58,6 +59,8 @@ dataSources:
           handler: handleLinkUpdated
         - event: SetARWallet(indexed address,string)
           handler: handleSetARWallet
+        - event: SetNick(indexed address,string)
+          handler: handleSetNick
         - event: SetAuthorInfo(indexed address,string,string)
           handler: handleSetAuthroInfo
         - event: SetItemOwner(indexed uint256,indexed address)
