--- a/eth/cryptozon-rinkeby/subgraph.yaml
+++ b/eth/cryptozon-rinkeby/subgraph.yaml
@@ -43,7 +43,7 @@ dataSources:
           handler: handleApproval
         - event: CategoryCreated(indexed uint256,indexed address)
           handler: handleCategoryCreated
-        - event: CategoryUpdated(indexed uint256,string,string)
+        - event: CategoryUpdated(indexed uint256,string,string,indexed address)
           handler: handleCategoryUpdated
         - event: ItemCoverUpdated(indexed uint256,indexed uint256,bytes,uint256,uint256)
           handler: handleItemCoverUpdated
