--- a/eth/package.json
+++ b/eth/package.json
@@ -4,6 +4,7 @@
     "@nomiclabs/buidler-ganache": "^1.3.3",
     "@nomiclabs/buidler-web3": "^1.3.4",
     "buidler-deploy": "^0.4.8",
+    "ganache-cli": "^6.9.1",
     "web3": "1.2.9"
   },
   "devDependencies": {
