--- a/eth/package.json
+++ b/eth/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "@ethereum-waffle/compiler": "^3.0.2",
     "@nomiclabs/buidler": "^1.3.8",
     "@nomiclabs/buidler-ganache": "^1.3.3",
     "@nomiclabs/buidler-web3": "^1.3.4",
     "buidler-deploy": "^0.4.8",
     "ganache-cli": "^6.9.1",
+    "solc": "^0.6.11",
     "web3": "1.2.9"
   },
   "devDependencies": {
