--- a/eth/package.json
+++ b/eth/package.json
@@ -7,7 +7,7 @@
     "buidler-deploy": "^0.5.5",
     "ganache-cli": "^6.9.1",
     "solc": "^0.6.11",
-    "web3": "1.2.9"
+    "web3": "^1.3.0"
   },
   "devDependencies": {
     "@nomiclabs/buidler-ethers": "^2.0.0",
