--- a/eth/thegraphTemplates/package.json
+++ b/eth/thegraphTemplates/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ vporton/zd-templates-sokol3",
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ undefined",
     "create-local": "graph create --node http://localhost:8020/ @TheGraph@",
     "remove-local": "graph remove --node http://localhost:8020/ @TheGraph@",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 @TheGraph@"
