--- a/eth/package.json
+++ b/eth/package.json
@@ -1,17 +1,19 @@
 {
   "dependencies": {
     "@ethereum-waffle/compiler": "^3.0.2",
-    "@nomiclabs/buidler": "^1.4.2",
-    "@nomiclabs/buidler-ganache": "^1.3.3",
-    "@nomiclabs/buidler-web3": "^1.3.4",
-    "buidler-deploy": "^0.5.5",
+    "@nomiclabs/hardhat-ethers": "^2.0.1",
+    "@nomiclabs/hardhat-ganache": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "ganache-cli": "^6.9.1",
+    "hardhat": "^2.0.4",
+    "hardhat-abi-exporter": "^2.0.6",
+    "hardhat-deploy": "^0.7.0-beta.35",
+    "hardhat-deploy-ethers": "^0.3.0-beta.7",
     "solc": "^0.6.11",
     "web3": "^1.3.0"
   },
   "devDependencies": {
-    "@nomiclabs/buidler-ethers": "^2.0.0",
-    "@nomiclabs/buidler-waffle": "^2.0.0",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.0.0"
