--- a/eth/package.json
+++ b/eth/package.json
@@ -5,6 +5,7 @@
     "@nomiclabs/hardhat-ganache": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
+    "ethers": "^5.0.23",
     "ganache-cli": "^6.9.1",
     "hardhat": "^2.0.4",
     "hardhat-abi-exporter": "^2.0.6",
@@ -15,7 +16,6 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.0"
+    "ethereum-waffle": "^3.0.0"
   }
 }
