--- a/eth/package.json
+++ b/eth/package.json
@@ -4,6 +4,7 @@
     "@nomiclabs/buidler": "^1.4.2",
     "@nomiclabs/buidler-ganache": "^1.3.3",
     "@nomiclabs/buidler-web3": "^1.3.4",
+    "@openzeppelin/contracts": "^3.3.0",
     "buidler-deploy": "^0.5.5",
     "ganache-cli": "^6.9.1",
     "solc": "^0.6.11",
