--- a/engine/src/engine/Cargo.toml
+++ b/engine/src/engine/Cargo.toml
@@ -3,6 +3,11 @@ name = "engine"
 version = "0.1.0"
 edition = "2018"
 
+target = ["wasm64-unknown-unknown"]
+
+[rust]
+lld = true
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
